# stochprocsim

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.ruff_cache/: .gitignore
demos/: QuantumDivergenceExample.py  demo.py  error_model.py  kl_divergence.py  prelim_data.py  propagating_state.py  quantum_divergence_example.py
demos/scripts/: GenerateGaussianUnitaries.py  find_waveplate_angles.py  generate_gaussian_unitaries.py  transition_probs.py
src/: FindWaveplateAngles.py
src/stochprocsim/: utils.py
src/stochprocsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/stochprocsim/Data/: 2026-06-22-1834_Trace_Brendan_PrelimData_Unnormalised.txt
src/stochprocsim/Libraries/: GenerateGaussianUnitaries.py  OpticsLib.py  PlotSamples.py
src/stochprocsim/Models/: CausalModels.py  SimulationSampler.py  TransitionModel.py  Unitaries.py  WaveplateAngles.py
src/stochprocsim/libraries/: optics_lib.py  plot_samples.py
src/stochprocsim/models/: causal_models.py  simulation_sampler.py  transition_model.py  unitaries.py
src/stochprocsim/stochprocq/: __init__.py  _backend.py  _utility.py  hmm.py  measure.py  meta.py
src/stochprocsim/stochprocq/Models/: renewal.py
