[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stochprocsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.16.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "ruff>=0.14.0",
    "scipy>=1.16.2",
    "sympy>=1.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88